--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -16,6 +16,9 @@
             <a href='/snippets/create'>Create Snippet</a>
         </nav>
         <section>
+            {{with .Flash}}
+            <div class='flash '>{{.}}</div>
+            {{end}}
             {{template "body" .}}
         </section>
 
