--- a/ui/html/create.page.tmpl
+++ b/ui/html/create.page.tmpl
@@ -23,7 +23,7 @@
         {{with .Form.Errors.expires }}
             <label class="error">{{.}}</label>
         {{end}}
-        {{$exp := or (.FormData.Get "expires") "365"}}
+        {{$exp := or (.Form.Get "expires") "365"}}
         <input type='radio' name='expires' value='365' {{if (eq $exp "365")}}checked{{end}}> One Year
         <input type='radio' name='expires' value='7' {{if (eq $exp "7")}}checked{{end}}> One Week
         <input type='radio' name='expires' value='1' {{if (eq $exp "1")}}checked{{end}}> One Day
